plantilla de blog y plantilla de perfiles terminada

--- a/blogs.html
+++ b/blogs.html
@@ -24,7 +24,7 @@
           <figure class="caja__imagen"><img src="images/imagen" alt="foto del articulo"/></figure>
           <div class="caja__contenido">
             <figure class="caja__usuario"><img src="images/jeremy" alt="cara del usuario"/></figure>
-            <h3 class="title__card">y si volvieramos a empezar?</h3>
+            <h3 class="title__card">Si volvieramos a empezar?</h3>
             <p>Hace unos dias estube pensando en que...</p>
           </div>
         </article>
@@ -32,7 +32,7 @@
           <figure class="caja__imagen"><img src="images/imagen" alt="foto del articulo"/></figure>
           <div class="caja__contenido">
             <figure class="caja__usuario"><img src="images/jeremy" alt="cara del usuario"/></figure>
-            <h3 class="title__card">y si volvieramos a empezar?</h3>
+            <h3 class="title__card">Si volvieramos a empezar?</h3>
             <p>Hace unos dias estube pensando en que...</p>
           </div>
         </article>
@@ -40,7 +40,7 @@
           <figure class="caja__imagen"><img src="images/imagen" alt="foto del articulo"/></figure>
           <div class="caja__contenido">
             <figure class="caja__usuario"><img src="images/jeremy" alt="cara del usuario"/></figure>
-            <h3 class="title__card">y si volvieramos a empezar?</h3>
+            <h3 class="title__card">Si volvieramos a empezar?</h3>
             <p>Hace unos dias estube pensando en que...</p>
           </div>
         </article>
@@ -48,7 +48,7 @@
           <figure class="caja__imagen"><img src="images/imagen" alt="foto del articulo"/></figure>
           <div class="caja__contenido">
             <figure class="caja__usuario"><img src="images/jeremy" alt="cara del usuario"/></figure>
-            <h3 class="title__card">y si volvieramos a empezar?</h3>
+            <h3 class="title__card">Si volvieramos a empezar?</h3>
             <p>Hace unos dias estube pensando en que...</p>
           </div>
         </article>
