Estructura Completa de los anuncios y blog terminadas

--- a/landing.html
+++ b/landing.html
@@ -20,67 +20,19 @@
     <main> 
       <section class="hero"> 
         <article class="hero__content">
-          <h1 class="tituloPrincipal">Titulo del Hero</h1>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque quis voluptas accusantium sed omnis atque id quia nam et ut. Est, ipsum vitae? Sit labore eveniet, doloribus error iusto repudiandae?</p>
+          <h1 class="tituloPrincipal">Bienvenido a Cerro House</h1>
+          <p>No, no es broma, Cerro House ahora tiene un website superPerron!!!, o eso creo...</p>
         </article>
       </section>
       <section class="anuncios">
         <h2 class="section__title">Anuncios</h2>
         <div class="section__grid">
           <article class="caja">
-            <figure class="caja__imagen"><img src="images/perron" alt="foto del articulo"/></figure>
+            <figure class="caja__imagen"><img src="assets/images/anuncios_blog/foto_portada.png" alt="foto del articulo:foto_portada.png"/></figure>
             <div class="caja__contenido">
-              <figure class="caja__usuario"><img src="images/jeremy" alt="cara del usuario"/></figure>
-              <h3 class="title__card">Titulo Perron</h3>
-              <p>hola como estas yo soy jeremy palomino y soy tu mejor amigo</p>
-            </div>
-          </article>
-          <article class="caja">
-            <figure class="caja__imagen"><img src="images/perron" alt="foto del articulo"/></figure>
-            <div class="caja__contenido">
-              <figure class="caja__usuario"><img src="images/jeremy" alt="cara del usuario"/></figure>
-              <h3 class="title__card">Titulo Perron</h3>
-              <p>hola como estas yo soy jeremy palomino y soy tu mejor amigo</p>
-            </div>
-          </article>
-          <article class="caja">
-            <figure class="caja__imagen"><img src="images/perron" alt="foto del articulo"/></figure>
-            <div class="caja__contenido">
-              <figure class="caja__usuario"><img src="images/jeremy" alt="cara del usuario"/></figure>
-              <h3 class="title__card">Titulo Perron</h3>
-              <p>hola como estas yo soy jeremy palomino y soy tu mejor amigo</p>
-            </div>
-          </article>
-          <article class="caja">
-            <figure class="caja__imagen"><img src="images/perron" alt="foto del articulo"/></figure>
-            <div class="caja__contenido">
-              <figure class="caja__usuario"><img src="images/jeremy" alt="cara del usuario"/></figure>
-              <h3 class="title__card">Titulo Perron</h3>
-              <p>hola como estas yo soy jeremy palomino y soy tu mejor amigo</p>
-            </div>
-          </article>
-          <article class="caja">
-            <figure class="caja__imagen"><img src="images/perron" alt="foto del articulo"/></figure>
-            <div class="caja__contenido">
-              <figure class="caja__usuario"><img src="images/jeremy" alt="cara del usuario"/></figure>
-              <h3 class="title__card">Titulo Perron</h3>
-              <p>hola como estas yo soy jeremy palomino y soy tu mejor amigo</p>
-            </div>
-          </article>
-          <article class="caja">
-            <figure class="caja__imagen"><img src="images/perron" alt="foto del articulo"/></figure>
-            <div class="caja__contenido">
-              <figure class="caja__usuario"><img src="images/jeremy" alt="cara del usuario"/></figure>
-              <h3 class="title__card">Titulo Perron</h3>
-              <p>hola como estas yo soy jeremy palomino y soy tu mejor amigo</p>
-            </div>
-          </article>
-          <article class="caja">
-            <figure class="caja__imagen"><img src="images/perron" alt="foto del articulo"/></figure>
-            <div class="caja__contenido">
-              <figure class="caja__usuario"><img src="images/jeremy" alt="cara del usuario"/></figure>
-              <h3 class="title__card">Titulo Perron</h3>
-              <p>hola como estas yo soy jeremy palomino y soy tu mejor amigo</p>
+              <figure class="caja__usuario"><img src="assets/images/faces/jeremy.jpg" alt="cara del usuario: jeremy.jpg"/></figure>
+              <h3 class="title__card">Bienvenido a Cerro House</h3>
+              <p>No, no es broma, Cerro House ahora tiene un website superPerron!!!, o eso creo...</p><a href="">Ver Mas</a>
             </div>
           </article>
         </div>
