--- a/participantes.html
+++ b/participantes.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cerro House || Oficial</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,200&amp;family=Roboto:wght@700&amp;display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/participantes.css">
   </head>
   <body> 
     <header> 
+      <figure class="logo"><img src="assets/images/logo_cerro_house.png"></figure>
+      <div class="icon_menu"></div>
       <nav> 
-        <div class="logo"></div>
         <ul>
           <li><a href="landing.html">Inicio</a></li>
           <li><a href="participantes.html">Participantes</a></li>
@@ -21,37 +25,13 @@
       <h1 class="tituloPrincipal">Participantes</h1>
       <section class="section__grid">
         <article class="tarjeta">
-          <figure class="tarjeta__imagen"><img src="images/Jeremy" alt="cara del usuario"/></figure>
-          <h3 class="title__card">Jeremyispapo</h3><span class="subtitle__card">@Palomino.dev</span><a href="#">Ver Perfil</a>
-        </article>
-        <article class="tarjeta">
-          <figure class="tarjeta__imagen"><img src="images/Jeremy" alt="cara del usuario"/></figure>
-          <h3 class="title__card">Jeremyispapo</h3><span class="subtitle__card">@Palomino.dev</span><a href="#">Ver Perfil</a>
-        </article>
-        <article class="tarjeta">
-          <figure class="tarjeta__imagen"><img src="images/Jeremy" alt="cara del usuario"/></figure>
-          <h3 class="title__card">Jeremyispapo</h3><span class="subtitle__card">@Palomino.dev</span><a href="#">Ver Perfil</a>
-        </article>
-        <article class="tarjeta">
-          <figure class="tarjeta__imagen"><img src="images/Jeremy" alt="cara del usuario"/></figure>
-          <h3 class="title__card">Jeremyispapo</h3><span class="subtitle__card">@Palomino.dev</span><a href="#">Ver Perfil</a>
-        </article>
-        <article class="tarjeta">
-          <figure class="tarjeta__imagen"><img src="images/Jeremy" alt="cara del usuario"/></figure>
-          <h3 class="title__card">Jeremyispapo</h3><span class="subtitle__card">@Palomino.dev</span><a href="#">Ver Perfil</a>
-        </article>
-        <article class="tarjeta">
-          <figure class="tarjeta__imagen"><img src="images/Jeremy" alt="cara del usuario"/></figure>
-          <h3 class="title__card">Jeremyispapo</h3><span class="subtitle__card">@Palomino.dev</span><a href="#">Ver Perfil</a>
-        </article>
-        <article class="tarjeta">
-          <figure class="tarjeta__imagen"><img src="images/Jeremy" alt="cara del usuario"/></figure>
+          <figure class="tarjeta__imagen"><img src="../assets/images/faces/jeremy.jpg" alt="cara del usuario: jeremy.jpg"/></figure>
           <h3 class="title__card">Jeremyispapo</h3><span class="subtitle__card">@Palomino.dev</span><a href="#">Ver Perfil</a>
         </article>
       </section>
     </main>
     <footer>
-      <p>Todos los reservados por Cerro House || Oficial</p>&copy; 2016 |<a href="#">View Source</a>
+      <p>Todos los reservados por Cerro House || Oficial | &copy; 2021 |</p>
     </footer>
   </body>
 </html>
