--- a/blog1.html
+++ b/blog1.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cerro House || Oficial</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,200&amp;family=Roboto:wght@700&amp;display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/landing.css" attr>
   </head>
   <body> 
     <header> 
+      <figure class="logo"><img src="assets/images/logo_cerro_house.png"></figure>
+      <div class="icon_menu"></div>
       <nav> 
-        <div class="logo"></div>
         <ul>
           <li><a href="landing.html">Inicio</a></li>
           <li><a href="participantes.html">Participantes</a></li>
@@ -19,7 +23,7 @@
     </header>
     <main> 
       <section class="hero">
-        <h1 class="title__blog">Bienvenido a Cerro House</h1>
+        <h1 class="title__blog">Bienvenido a Cerro House Mouse</h1>
       </section>
       <section class="contentido__blog">
         <article class="bloque__texto">
@@ -54,7 +58,7 @@
       </article>
     </aside>
     <footer>
-      <p>Todos los reservados por Cerro House || Oficial</p>&copy; 2016 |<a href="#">View Source</a>
+      <p>Todos los reservados por Cerro House || Oficial | &copy; 2021 |</p>
     </footer>
   </body>
 </html>
