--- a/blogs.html
+++ b/blogs.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cerro House || Oficial</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,200&amp;family=Roboto:wght@700&amp;display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/blogs.css">
   </head>
   <body> 
     <header> 
+      <figure class="logo"><img src="assets/images/logo_cerro_house.png"></figure>
+      <div class="icon_menu"></div>
       <nav> 
-        <div class="logo"></div>
         <ul>
           <li><a href="landing.html">Inicio</a></li>
           <li><a href="participantes.html">Participantes</a></li>
@@ -21,41 +25,17 @@
       <h1>Lista de Blogs</h1>
       <section class="section__grid">
         <article class="caja">
-          <figure class="caja__imagen"><img src="images/imagen" alt="foto del articulo"/></figure>
+          <figure class="caja__imagen"><img src="assets/images/anuncios_blog/imagen" alt="foto del articulo:imagen"/></figure>
           <div class="caja__contenido">
-            <figure class="caja__usuario"><img src="images/jeremy" alt="cara del usuario"/></figure>
+            <figure class="caja__usuario"><img src="assets/images/faces/jeremy" alt="cara del usuario: jeremy"/></figure>
             <h3 class="title__card">Si volvieramos a empezar?</h3>
-            <p>Hace unos dias estube pensando en que...</p>
-          </div>
-        </article>
-        <article class="caja">
-          <figure class="caja__imagen"><img src="images/imagen" alt="foto del articulo"/></figure>
-          <div class="caja__contenido">
-            <figure class="caja__usuario"><img src="images/jeremy" alt="cara del usuario"/></figure>
-            <h3 class="title__card">Si volvieramos a empezar?</h3>
-            <p>Hace unos dias estube pensando en que...</p>
-          </div>
-        </article>
-        <article class="caja">
-          <figure class="caja__imagen"><img src="images/imagen" alt="foto del articulo"/></figure>
-          <div class="caja__contenido">
-            <figure class="caja__usuario"><img src="images/jeremy" alt="cara del usuario"/></figure>
-            <h3 class="title__card">Si volvieramos a empezar?</h3>
-            <p>Hace unos dias estube pensando en que...</p>
-          </div>
-        </article>
-        <article class="caja">
-          <figure class="caja__imagen"><img src="images/imagen" alt="foto del articulo"/></figure>
-          <div class="caja__contenido">
-            <figure class="caja__usuario"><img src="images/jeremy" alt="cara del usuario"/></figure>
-            <h3 class="title__card">Si volvieramos a empezar?</h3>
-            <p>Hace unos dias estube pensando en que...</p>
+            <p>Hace unos dias estube pensando en que...</p><a href="">Ver Perfil</a>
           </div>
         </article>
       </section>
     </main>
     <footer>
-      <p>Todos los reservados por Cerro House || Oficial</p>&copy; 2016 |<a href="#">View Source</a>
+      <p>Todos los reservados por Cerro House || Oficial | &copy; 2021 |</p>
     </footer>
   </body>
 </html>
