--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			background-image: url('assets/images/cerro.jpg');
+			background:green
 		}
 	</style>
 </head>
