--- a/jeremy.html
+++ b/jeremy.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cerro House || Oficial</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,200&amp;family=Roboto:wght@700&amp;display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/jeremy.css">
   </head>
   <body> 
     <header> 
+      <figure class="logo"><img src="assets/images/logo_cerro_house.png"></figure>
+      <div class="icon_menu"></div>
       <nav> 
-        <div class="logo"></div>
         <ul>
           <li><a href="landing.html">Inicio</a></li>
           <li><a href="participantes.html">Participantes</a></li>
@@ -19,8 +23,8 @@
     </header>
     <main> 
       <section class="principal">
-        <figure><img src="jeremy" alt="alt"/></figure>
-        <h1>Jeremyispapo</h1><span class="link"> <a href="https://instagram.com" target="_blank">Palomino.Dev</a></span>
+        <figure><img src="../assets/images/faces/jeremy.jpg" alt="alt"/></figure>
+        <h1>Jeremyispapo</h1><span class="link"> <a href="https://www.instagram.com/palomino.dev/" target="_blank">Palomino.Dev</a></span>
         <p class="quote">Tareas hay muchas, vida una sola, asi que...</p><span class="date">17/07/21</span>
       </section>
       <section class="stickers">
@@ -44,24 +48,24 @@
       <section class="songs">
         <article>
           <figure><img src="twenty__pilots.png" alt="alt"/></figure>
-          <h3 class="song__title">Level of Concerted</h3><span class="song__artist">twenty one Pilot</span><span class="song__time">3:15 min</span><a class="song__artist" href="https://www.twentyonepilot.com" target="_blank"><span>▶</span></a>
+          <h3 class="song__title">Level of Concern</h3><span class="song__artist">twenty one Pilot</span><span class="song__time">3:52 min</span><a class="song__artist" href="https://www.youtube.com/watch?v=loOWKm8GW6A" target="_blank"><span>▶</span></a>
         </article>
         <article>
           <figure><img src="dualipa.png" alt="alt"/></figure>
-          <h3 class="song__title">Leviating</h3><span class="song__artist">Dua Lipa</span><span class="song__time">4:20 min</span><a class="song__artist" href="https://www.dualipa.com" target="_blank"><span>▶</span></a>
+          <h3 class="song__title">Leviating</h3><span class="song__artist">Dua Lipa</span><span class="song__time">3:50 min</span><a class="song__artist" href="https://www.youtube.com/watch?v=TUVcZfQe-Kw" target="_blank"><span>▶</span></a>
         </article>
         <article>
           <figure><img src="Daikiri.png" alt="alt"/></figure>
-          <h3 class="song__title">Daikiri</h3><span class="song__artist">Simon Grossmann</span><span class="song__time">3:30 min</span><a class="song__artist" href="https://www.simongrossmann.com" target="_blank"><span>▶</span></a>
+          <h3 class="song__title">Daikiri</h3><span class="song__artist">Simon Grossmann</span><span class="song__time">3:57 min</span><a class="song__artist" href="https://www.youtube.com/watch?v=yJGAEh2gmDE" target="_blank"><span>▶</span></a>
         </article>
         <article>
           <figure><img src="todo_de_ti.png" alt="alt"/></figure>
-          <h3 class="song__title">todo_de_ti</h3><span class="song__artist">Rauw Alejandro</span><span class="song__time">4:20 min</span><a class="song__artist" href="https://www.rauwalejandro.com" target="_blank"><span>▶</span></a>
+          <h3 class="song__title">todo_de_ti</h3><span class="song__artist">Rauw Alejandro</span><span class="song__time">3:31 min</span><a class="song__artist" href="https://www.youtube.com/watch?v=CFPLIaMpGrY" target="_blank"><span>▶</span></a>
         </article>
       </section>
     </main>
     <footer>
-      <p>Todos los reservados por Cerro House || Oficial</p>&copy; 2016 |<a href="#">View Source</a>
+      <p>Todos los reservados por Cerro House || Oficial | &copy; 2021 |</p>
     </footer>
   </body>
 </html>
