fase final de mis proyectos

--- a/blogs.html
+++ b/blogs.html
@@ -23,15 +23,15 @@
     </header>
     <main>
       <h1>Lista de Blogs</h1>
-      <section class="section__grid">
-        <article class="caja">
-          <figure class="caja__imagen"><img src="assets/images/anuncios_blog/imagen" alt="foto del articulo:imagen"/></figure>
-          <div class="caja__contenido">
-            <figure class="caja__usuario"><img src="assets/images/faces/jeremy" alt="cara del usuario: jeremy"/></figure>
-            <h3 class="title__card">Si volvieramos a empezar?</h3>
-            <p>Hace unos dias estube pensando en que...</p><a href="">Ver Perfil</a>
-          </div>
-        </article>
+      <section class="pd__section">
+        <div class="section__grid"><a class="caja" href="blog1.html">
+            <figure class="caja__imagen"><img src="assets/images/anuncios_blog/imagen" alt="foto del articulo:imagen"/></figure>
+            <div class="caja__contenido">
+              <figure class="caja__usuario"><img src="assets/images/faces/jeremy" alt="cara del usuario: jeremy"/></figure>
+              <h3 class="title__card">Si volvieramos a empezar?</h3>
+              <p>Hace unos dias estube pensando en que...</p>
+            </div></a>
+        </div>
       </section>
     </main>
     <footer>
