--- a/landing.html
+++ b/landing.html
@@ -25,25 +25,23 @@
       <section class="hero"> 
         <article class="hero__content">
           <picture class="hero__image">
-            <source media="(min-width:700px )" srcset="assets/images/foto_portada_desktop.png"><img src="assets/images/foto_portada.png">
+            <source media="(min-width:760px )" srcset="assets/images/foto_portada_desktop.png"><img src="assets/images/foto_portada.png">
           </picture>
           <div class="text_content">
-            <h1 class="tituloPrincipal">Bienvenido a Cerro House</h1>
+            <h1 class="tituloPrincipal"> <a href="blog1.html">Bienvenido a Cerro House</a></h1>
             <p>No, no es broma, Cerro House ahora tiene un website superPerron!!!, o eso creo...</p><a class="button__link" href="blog1.html">Ver Mas</a>
           </div>
         </article>
       </section>
-      <section class="anuncios">
+      <section class="pd__section">
         <h2 class="section__title">Anuncios</h2>
-        <div class="section__grid">
-          <article class="caja">
+        <div class="section__grid"><a class="caja" href="blog1.html">
             <figure class="caja__imagen"><img src="assets/images/anuncios_blog/foto_portada.png" alt="foto del articulo:foto_portada.png"/></figure>
             <div class="caja__contenido">
               <figure class="caja__usuario"><img src="assets/images/faces/jeremy.jpg" alt="cara del usuario: jeremy.jpg"/></figure>
               <h3 class="title__card">Bienvenido a Cerro House</h3>
-              <p>No, no es broma, Cerro House ahora tiene un website superPerron!!!, o eso creo...</p><a href="">Ver Perfil</a>
-            </div>
-          </article>
+              <p>No, no es broma, Cerro House ahora tiene un website superPerron!!!, o eso creo...</p>
+            </div></a>
         </div>
       </section>
     </main>
