--- a/participantes.html
+++ b/participantes.html
@@ -22,12 +22,26 @@
       </nav>
     </header>
     <main>
-      <h1 class="tituloPrincipal">Participantes</h1>
-      <section class="section__grid">
-        <article class="tarjeta">
-          <figure class="tarjeta__imagen"><img src="../assets/images/faces/jeremy.jpg" alt="cara del usuario: jeremy.jpg"/></figure>
-          <h3 class="title__card">Jeremyispapo</h3><span class="subtitle__card">@Palomino.dev</span><a href="#">Ver Perfil</a>
-        </article>
+      <section class="pd__section"> 
+        <h1 class="section__title">Participantes</h1>
+        <section class="section__grid">
+          <article class="tarjeta">
+            <figure class="tarjeta__imagen"><img src="../assets/images/faces/jeremy.jpg" alt="cara del usuario: jeremy.jpg"/></figure>
+            <h3 class="title__card">Jeremyispapo</h3><a class="subtitle__card" href="https://www.instagram.com/palomino.dev/">@Palomino.dev</a><a class="button__link--user" href="jeremy.html">Ver Perfil</a>
+          </article>
+          <article class="tarjeta">
+            <figure class="tarjeta__imagen"><img src="../assets/images/faces/jeremy.jpg" alt="cara del usuario: jeremy.jpg"/></figure>
+            <h3 class="title__card">Jeremyispapo</h3><a class="subtitle__card" href="https://www.instagram.com/palomino.dev/">@Palomino.dev</a><a class="button__link--user" href="jeremy.html">Ver Perfil</a>
+          </article>
+          <article class="tarjeta">
+            <figure class="tarjeta__imagen"><img src="../assets/images/faces/jeremy.jpg" alt="cara del usuario: jeremy.jpg"/></figure>
+            <h3 class="title__card">Jeremyispapo</h3><a class="subtitle__card" href="https://www.instagram.com/palomino.dev/">@Palomino.dev</a><a class="button__link--user" href="jeremy.html">Ver Perfil</a>
+          </article>
+          <article class="tarjeta">
+            <figure class="tarjeta__imagen"><img src="../assets/images/faces/jeremy.jpg" alt="cara del usuario: jeremy.jpg"/></figure>
+            <h3 class="title__card">Jeremyispapo</h3><a class="subtitle__card" href="https://www.instagram.com/palomino.dev/">@Palomino.dev</a><a class="button__link--user" href="jeremy.html">Ver Perfil</a>
+          </article>
+        </section>
       </section>
     </main>
     <footer>
