--- a/blog1.html
+++ b/blog1.html
@@ -23,6 +23,7 @@
     </header>
     <main> 
       <section class="hero">
+        <figure class="hero__image"><img src="" alt="f"></figure>
         <h1 class="title__blog">Bienvenido a Cerro House Mouse</h1>
       </section>
       <section class="contentido__blog">
@@ -54,7 +55,7 @@
     <aside> 
       <article class="tarjeta">
         <figure class="tarjeta__imagen"><img src="../assets/images/faces/jeremy.jpg" alt="cara del usuario: jeremy.jpg"/></figure>
-        <h3 class="title__card">Jeremyispapo</h3><span class="subtitle__card">@Palomino.dev</span><a href="#">Ver Perfil</a>
+        <h3 class="title__card">Jeremyispapo</h3><a class="subtitle__card" href="https://www.instagram.com/palomino.dev/">@Palomino.dev</a><a class="button__link--user" href="undefined">Ver Perfil</a>
       </article>
     </aside>
     <footer>
