no hay problema alguno en la muestra v.1

--- a/blog1.html
+++ b/blog1.html
@@ -25,7 +25,7 @@
     </header>
     <main> 
       <section class="hero">
-        <figure class="hero__image"><img src="assets/images/foto_portada.png" alt="f"></figure>
+        <figure class="hero__image"><img src="assets/images/anuncios_blog/blog1.png" alt="f"></figure>
         <h1 class="hero__title">Bienvenido a Cerro House Mouse</h1>
       </section>
       <section class="pd__section">
@@ -56,7 +56,7 @@
           <aside class="aside"> 
             <article class="tarjeta">
               <figure class="tarjeta__imagen"><img src="../assets/images/users/jeremy/jeremy.jpg" alt="alt"/></figure>
-              <h3 class="title__card">Jeremyispapo</h3><a class="subtitle__card" href="https://www.instagram.com/palomino.dev/">@Palomino.dev</a><a class="button__link--user" href="jeremy.html">Ver Perfil</a>
+              <h3 class="title__card">Jeremyispapo</h3><a class="subtitle__card" href="https://www.instagram.com/palomino.dev">@palomino.dev</a><a class="button__link--user" href="jeremy.html">Ver Perfil</a>
             </article>
           </aside>
         </section>
