--- a/participantes.html
+++ b/participantes.html
@@ -29,7 +29,23 @@
         <section class="section__grid">
           <article class="tarjeta">
             <figure class="tarjeta__imagen"><img src="../assets/images/users/jeremy/jeremy.jpg" alt="alt"/></figure>
-            <h3 class="title__card">Jeremyispapo</h3><a class="subtitle__card" href="https://www.instagram.com/palomino.dev/">@Palomino.dev</a><a class="button__link--user" href="jeremy.html">Ver Perfil</a>
+            <h3 class="title__card">Jeremyispapo</h3><a class="subtitle__card" href="https://www.instagram.com/palomino.dev">@palomino.dev</a><a class="button__link--user" href="jeremy.html">Ver Perfil</a>
+          </article>
+          <article class="tarjeta">
+            <figure class="tarjeta__imagen"><img src="../assets/images/users/andrea/andrea.jpg" alt="alt"/></figure>
+            <h3 class="title__card">Andrea</h3><a class="subtitle__card" href="https://www.instagram.com/andreadelacruz_26">@andreadelacruz_26</a><a class="button__link--user" href="andrea.html">Ver Perfil</a>
+          </article>
+          <article class="tarjeta">
+            <figure class="tarjeta__imagen"><img src="../assets/images/users/kiara/kiara.jpg" alt="alt"/></figure>
+            <h3 class="title__card">kiara</h3><a class="subtitle__card" href="https://www.instagram.com/kiara.sadith">@kiara.sadith</a><a class="button__link--user" href="kiara.html">Ver Perfil</a>
+          </article>
+          <article class="tarjeta">
+            <figure class="tarjeta__imagen"><img src="../assets/images/users/alexandro/alexandro.jpg" alt="alt"/></figure>
+            <h3 class="title__card">alexandro</h3><a class="subtitle__card" href="https://www.instagram.com/pieroj_02">@pieroj_02</a><a class="button__link--user" href="alexandro.html">Ver Perfil</a>
+          </article>
+          <article class="tarjeta">
+            <figure class="tarjeta__imagen"><img src="../assets/images/users/adhrian/adhrian.jpg" alt="alt"/></figure>
+            <h3 class="title__card">adhrian</h3><a class="subtitle__card" href="https://www.instagram.com/adrh023">@adrh023</a><a class="button__link--user" href="adhrian.html">Ver Perfil</a>
           </article>
         </section>
       </section>
