--- a/blog3.html
+++ b/blog3.html
@@ -16,7 +16,7 @@
         <div class="header__icon" id="menu"> </div>
         <nav class="nav" id="nav"> 
           <ul class="nav__ul">
-            <li class="nav__item"><a class="nav__link" href="landing.html">Inicio</a></li>
+            <li class="nav__item"><a class="nav__link" href="index.html">Inicio</a></li>
             <li class="nav__item"><a class="nav__link" href="blogs.html">Blog</a></li>
             <li class="nav__item"><a class="nav__link" href="participantes.html">Participantes</a></li>
           </ul>
